# minimesh

./: .clang-format  .gitignore  CMakeLists.txt
includes/: concatenate.hpp  import.hpp  job.hpp  options.hpp  viewer.hpp
src/: concatenate.cpp  import.cpp  job.cpp  main.cpp  options.cpp  viewer.cpp
